--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -103,3 +103,9 @@ input {
     color: $state-danger-text;
   }
 }
+#show-profile{
+  font-size:20px;
+  #show-location{
+    margin-bottom:20px;
+  }
+}
