--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,20 +1,35 @@
 <h1>プロフィールの編集</h1>
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
-    <%= form_for(@user) do |f| %>
+    <%= form_for(@user , :html => {:class => "form-horizontal"}) do |f| %>
       <%= render 'shared/error_messages', object: f.object %>
-      <%= f.label :name %>
-      <%= f.text_field :name %>
-
-      <%= f.label :email %>
-      <%= f.text_field :email %>
-
-      <%= f.label :location %>
-      <%= f.text_field :location %>
-
-      <%= f.label :profile %>
-      <%= f.text_area :profile %>
-
-      <%= f.submit "edit", class: "btn btn-large btn-primary" %>
+      <div class="form-group">
+        <%= f.label :name ,class: "col-md-2 control-label" %>
+        <div class="col-md-10">
+          <%= f.text_field :name ,class: "form-control"%>
+        </div>
+      </div>
+      <div class="form-group">
+        <%= f.label :email ,class: "col-md-2 control-label" %>
+        <div class="col-md-10">
+          <%= f.text_field :email ,class: " form-control" %>
+        </div>
+      </div>
+      <div class="form-group">
+        <%= f.label :location ,class: "col-md-2 control-label" %>
+        <div class="col-md-10">
+          <%= f.text_field :location, class: "form-control" %>
+        </div>
+      </div>
+      <div class="form-group">  
+        <%= f.label :profile,class: "col-md-2 control-label" %>
+        <div class="col-md-10">
+          <%= f.text_area :profile ,class: "form-control"%>
+        </div>
+      </div>  
+      <div class="form-group">
+        <%= f.submit "edit", class: "btn btn-large btn-primary" %>
+      </div>
     <% end %>
   </div>
+</div>
