--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,12 +1,21 @@
-<h1>
-  <%= gravatar_for @user %>
-  <%= @user.name %>
-</h1>
+
 <div class="row">
-  <div class="col-md-offset-3 col-md-6" id="show-profile">
-   <div id="show-location" >
-     <span class="col-md-3">location:</span> <span class="col-md-9"> <%= @user.location %>　</span>   
-    </div>
-    <span class="col-md-3"> profile: </span><span class="col-md-9"><%= @user.profile %>  　</span> 
+  <aside class="col-md-4">
+    <section class="user_info">
+      <h1>
+        <%= gravatar_for @user %>
+        <%= @user.name %>
+      </h1>
+    </section>
+  </aside>
+  <div class="col-md-8">
+    <% if @user.microposts.any? %>
+      <h3>Microposts (<%= @user.microposts.count %>)</h3>
+      <ol class="microposts">
+      <% @microposts.each do |micropost| %>
+        <%= render partial: 'microposts/micropost', locals: { micropost: micropost } %>
+      <% end %>
+      </ol>
+    <% end %>
   </div>
 </div>
